--- a/package.json
+++ b/package.json
@@ -1,19 +1,13 @@
 {
-  "name": "whatsapp-streamlit",
+  "name": "whatsapp-worker",
   "version": "1.0.0",
-  "description": "",
+  "description": "Worker Node.js para WhatsApp",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.3",
-    "express": "^4.21.0",
-    "qrcode": "^1.5.4",
-    "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.26.0"
+    "express": "^4.17.1",
+    "whatsapp-web.js": "^1.15.1"
   }
 }
